--- a/css/style.css
+++ b/css/style.css
@@ -555,6 +555,9 @@ h5.sub {
 .skills-bar .bar_group__bar:nth-of-type(8) {
   background: #00bdbd;
 }
+.skills-bar .bar_group__bar:nth-of-type(9) {
+  background: #00bdbd;
+}
 .bar_group {
   position: relative;
 }
