--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body a {
 	-ms-transition:.5s ease-in-out;
 }
 .banner{
-	background:url(../images/bg.jpg) no-repeat 0px 0px;
+	background:url(../images/banner.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
@@ -51,7 +51,7 @@ body a {
 		margin-bottom: 10.6em
 }
 .banner1{
-	background:url(../images/bg.jpg) no-repeat 0px 0px;
+	background:url(../images/banner.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
